--- a/gaas-ui/helmchart/values.yaml
+++ b/gaas-ui/helmchart/values.yaml
@@ -5,28 +5,29 @@
 replicaCount: 1
 
 image:
-    #Ask about repository setting
-    # repository: image-registry.openshift-image-registry.svc:5000/kai-ui-docker-5/kai:latest
-    # macenturalxl1/kai-ui-image:v4
-    repository: a-docker-repo/kai-image
-    pullPolicy: IfNotPresent
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: ''
-    containerPort: 8081
+  #Ask about repository setting
+  # repository: image-registry.openshift-image-registry.svc:5000/kai-ui-docker-5/kai:latest
+  # macenturalxl1/kai-ui-image:v4
+  repository: rocky341/kai-fixes-image
 
-imagePullSecrets: []
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: ''
+  containerPort: 8081
+
+imagePullSecrets: [ ]
 nameOverride: ''
 fullnameOverride: ''
 
 service:
-    type: ClusterIP
-    port: 8081
-    targetPort: 8081
+  type: ClusterIP
+  port: 8081
+  targetPort: 8081
 
 envConfigFile: "env-config.js"
 
 envVariables:
-    reactAPIPlatform: "test"
-    kaiRestAPIHost: "http://openshift.host.co.uk/"
-    cognitoUserpoolID: "us-east-1_ABC1def2g"
-    cognitoClientID: "c0gN1t0Id"
+  reactAPIPlatform: "test"
+  kaiRestAPIHost: "http://gaas-rest-kai-helm-3.apps.ocp1.purplesky-harmony.co.uk"
+  cognitoUserpoolID: "us-east-1_ABC1def2g"
+  cognitoClientID: "c0gN1t0Id"
