--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/setup-node@v1
 
     - name: Set up Node
-      uses: actions/setup-java@v1
+      uses: actions/setup-node@v1
       with:
         node-version: 14.16.0
 
