--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,18 +20,19 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./gaas-ui
+#        working-directory: ./gaas-ui
 
     steps:
-    - uses: actions/setup-node@v1
-
     - name: Set up Node
       uses: actions/setup-node@v1
       with:
         node-version: 14.16.0
 
     - name: Install dependencies
-      run: npm run install
+      run: |
+        ls
+        cd ./gaas-ui/
+        npm run install
 
     - name: Run tests
       run: npm run test
