--- a/gaffer-as-a-service/gaffer-controller/pom.xml
+++ b/gaffer-as-a-service/gaffer-controller/pom.xml
@@ -14,55 +14,24 @@
   <version>1.13.0</version>
   <properties>
     <kubernetes.version>11.0.0</kubernetes.version>
-    <slf4j.api.version>1.7.25</slf4j.api.version>
-    <apache.commons.text.version>1.9</apache.commons.text.version>
     <!-- Testing versions -->
-    <junit.version>5.7.0</junit.version>
     <mockito.version>2.21.0</mockito.version>
     <!-- Maven versions -->
-    <compiler.plugin.version>2.3.2</compiler.plugin.version>
-    <surefire.version>3.0.0-M5</surefire.version>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>io.kubernetes</groupId>
-      <artifactId>client-java</artifactId>
-      <version>${kubernetes.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.kubernetes</groupId>
-      <artifactId>client-java-extended</artifactId>
-      <version>${kubernetes.version}</version>
+      <groupId>uk.gov.gchq.gaffer</groupId>
+      <artifactId>gaas-common</artifactId>
+      <version>1.13.0</version>
     </dependency>
     <dependency>
       <groupId>io.kubernetes</groupId>
       <artifactId>client-java-spring-integration</artifactId>
       <version>${kubernetes.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.api.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>${slf4j.api.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-text</artifactId>
-      <version>${apache.commons.text.version}</version>
-    </dependency>
 
     <!-- Test Dependencies -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -73,20 +42,6 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${compiler.plugin.version}</version>
-        <configuration>
-          <source>8</source>
-          <target>8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${surefire.version}</version>
-      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
