--- a/gaas-ui/.eslintrc.json
+++ b/gaas-ui/.eslintrc.json
@@ -13,14 +13,15 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 2018,
+    "project": "./tsconfig.json"
+
   },
   "plugins": [
     "react",
     "@typescript-eslint",
     "@typescript-eslint/eslint-plugin",
-    "prettier",
-    "notice"
+    "prettier"
   ],
   "rules": {
     "semi": 2,
