--- a/gaas-rest/deploy/helm/templates/role-binding.yaml
+++ b/gaas-rest/deploy/helm/templates/role-binding.yaml
@@ -1,7 +1,7 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: rolebinding
+  name: clusterrolebinding
 subjects:
   - kind: ServiceAccount
     name: {{ .Values.serviceAccountName }}
@@ -10,3 +10,5 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-reader
+
+
